--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "userinfo",
-  "version": "1.1.1",
+  "version": "1.1.2-SNAPSHOT",
   "private": false,
   "description": "Javascript wrapper for the userinfo.io API",
   "keywords": [
